[project]
name = "fastapiproject"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "bcrypt==3.1.7",
    "blurhash-python>=1.2.2",
    "fastapi>=0.136.1",
    "fastapi-cache2[redis]>=0.2.2",
    "fastapi-mail>=1.6.4",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "passlib[bcrypt,bycrypt]>=1.7.4",
    "pillow>=12.2.0",
    "pydantic[email]>=2.13.4",
    "pyjwt>=2.12.1",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.28",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.46.0",
]
